-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
5.15.19, 6.9.1, 6.10
-
25fdc044f (dev), e7a9bb77f (6.10), 299000fa4 (6.9)
QFileDialog has several static functions to help when opening files
`getOpenFileName(s)`, `getOpenFileUrl(s)`, `getOpenFileContent`. They all issue modal dialogs, apart from `getOpenFileContent` which issues a non-modal dialog.
I think they should all be modal.
For Gerrit Dashboard: QTBUG-137329 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
649980,5 | make all convenience functions in QFileDialog open modal dialogs | dev | qt/qtbase | Status: MERGED | +2 | 0 |
651360,2 | make all convenience functions in QFileDialog open modal dialogs | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
651771,2 | make all convenience functions in QFileDialog open modal dialogs | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |