src/widgets/dialogs/qfiledialog.cpp
@@ -2333,7 +2333,7 @@ void QFileDialog::getOpenFileContent(const QString &nameFilter, const std::funct
     };
 
     connect(dialog, &QFileDialog::fileSelected, dialog, fileSelected);
-    dialog->show();
+    dialog->open();
 #endif
 }
 
@@ -2376,7 +2376,7 @@ void QFileDialog::saveFileContent(const QByteArray &fileContent, const QString &
 
     connect(dialog, &QFileDialog::fileSelected, dialog, fileSelected);
     dialog->setAttribute(Qt::WA_DeleteOnClose);
-    dialog->show();
+    dialog->open();
 #endif
 }
 
